# dawpp

./: CMakeLists.txt  README.md  get_juce_deps.sh
dawpp/: midi_track.cpp  midi_track.h
src/: example.cpp  example.h
